; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_pxa2xx_spi.c_ssp_get_clk_div.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_pxa2xx_spi.c_ssp_get_clk_div.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssp_device = type { i64, i32 }

@PXA25x_SSP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ssp_device*, i32)* @ssp_get_clk_div to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ssp_get_clk_div(%struct.ssp_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ssp_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.ssp_device* %0, %struct.ssp_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ssp_device*, %struct.ssp_device** %4, align 8
  %8 = getelementptr inbounds %struct.ssp_device, %struct.ssp_device* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i64 @clk_get_rate(i32 %9)
  store i64 %10, i64* %6, align 8
  %11 = load %struct.ssp_device*, %struct.ssp_device** %4, align 8
  %12 = getelementptr inbounds %struct.ssp_device, %struct.ssp_device* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @PXA25x_SSP, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %2
  %17 = load i64, i64* %6, align 8
  %18 = load i32, i32* %5, align 4
  %19 = mul nsw i32 2, %18
  %20 = sext i32 %19 to i64
  %21 = udiv i64 %17, %20
  %22 = sub i64 %21, 1
  %23 = and i64 %22, 255
  %24 = shl i64 %23, 8
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %3, align 4
  br label %35

26:                                               ; preds = %2
  %27 = load i64, i64* %6, align 8
  %28 = load i32, i32* %5, align 4
  %29 = sext i32 %28 to i64
  %30 = udiv i64 %27, %29
  %31 = sub i64 %30, 1
  %32 = and i64 %31, 4095
  %33 = shl i64 %32, 8
  %34 = trunc i64 %33 to i32
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %26, %16
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i64 @clk_get_rate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
